Отредактировал навыки в index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Портфолио — Твоё Имя</title>
+<title>Сергей Попов - Погасий. Портфолио начинающего разработчика</title>
 <style>
   body {
     font-family: 'Courier New', Courier, monospace;
@@ -62,17 +62,19 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="typed">Привет! Я — Твоё Имя</h1>
+    <h1 id="typed">Мир Господень! Я Сергей Попов - Погасий</h1>
 
     <section id="about">
       <h2>О себе</h2>
-      <p>Я начинающий разработчик, изучаю язык C и стремлюсь развиваться в области системного и встраиваемого программного обеспечения. Планирую создавать мини-проекты и постепенно расширять своё портфолио.</p>
+      <p>Начинающий разработчик, изучаю язык C и стремлюсь развиваться в области системного и встраиваемого программного обеспечения. Планирую создавать мини-проекты и постепенно расширять своё портфолио.</p>
     </section>
 
     <section id="skills">
       <h2>Навыки</h2>
       <ul>
         <li>Язык C — базовый уровень, в процессе изучения</li>
+        <li>Язык C++ — базовый уровень, в процессе изучения</li>
+        <li>Язык Python — базовый уровень, в процессе изучения</li>
         <li>Основы алгоритмов и структур данных</li>
         <li>Работа с Git и GitHub</li>
         <li>Понимание системного программирования и ОС</li>
@@ -86,8 +88,8 @@
 
     <section id="contacts">
       <h2>Контакты</h2>
-      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
+      <p>Email: <a href="mailto:yar.afan.1991@gmail.com">yar.afan.1991@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/Ezio575" target="_blank">github.com/Ezio575</a></p>
     </section>
   </div>
 </body>
