--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Сергей Попов - Погасий. Портфолио начинающего разработчика</title>
+<title>Сергей Попов-Погасий<br>Портфолио начинающего разработчика</title>
 <style>
   body {
     font-family: 'Courier New', Courier, monospace;
