--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2 id="typed">Мир Божий!<br>Меня зовут Сергей Попов - Погасий</h2>
 
     <section id="about">
-      <h2>О себе</h2>
+      <h2><i>О себе</i></h2>
       <p>Начинающий разработчик, изучаю язык C и стремлюсь развиваться в области системного и встраиваемого программного обеспечения. Планирую создавать мини-проекты и постепенно расширять своё портфолио.</p>
     </section>
 
